--- a/Calculator/mainwindow.ui
+++ b/Calculator/mainwindow.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="result_show">
     <property name="geometry">
      <rect>
       <x>-5</x>
@@ -40,7 +40,7 @@ backgronud-color:white;</string>
      <string>0</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="pushButton_7">
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -56,7 +56,7 @@ backgronud-color:white;</string>
      <string>7</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="pushButton_8">
     <property name="geometry">
      <rect>
       <x>60</x>
@@ -72,7 +72,7 @@ backgronud-color:white;</string>
      <string>8</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_3">
+   <widget class="QPushButton" name="pushButton_9">
     <property name="geometry">
      <rect>
       <x>120</x>
@@ -88,7 +88,7 @@ backgronud-color:white;</string>
      <string>9</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_4">
+   <widget class="QPushButton" name="pushButton_mult">
     <property name="geometry">
      <rect>
       <x>180</x>
@@ -101,7 +101,7 @@ backgronud-color:white;</string>
      <string>*</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_5">
+   <widget class="QPushButton" name="pushButton_minus">
     <property name="geometry">
      <rect>
       <x>180</x>
@@ -130,7 +130,7 @@ backgronud-color:white;</string>
      <string>6</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_7">
+   <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -146,7 +146,7 @@ backgronud-color:white;</string>
      <string>4</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_8">
+   <widget class="QPushButton" name="pushButton_5">
     <property name="geometry">
      <rect>
       <x>60</x>
@@ -162,7 +162,7 @@ backgronud-color:white;</string>
      <string>5</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_9">
+   <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
       <x>120</x>
@@ -178,7 +178,7 @@ backgronud-color:white;</string>
      <string>3</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_10">
+   <widget class="QPushButton" name="pushButton_1">
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -194,7 +194,7 @@ backgronud-color:white;</string>
      <string>1</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_11">
+   <widget class="QPushButton" name="pushButton_sum">
     <property name="geometry">
      <rect>
       <x>180</x>
@@ -207,7 +207,7 @@ backgronud-color:white;</string>
      <string>+</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_12">
+   <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
       <x>60</x>
@@ -223,7 +223,7 @@ backgronud-color:white;</string>
      <string>2</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_13">
+   <widget class="QPushButton" name="pushButton_dot">
     <property name="geometry">
      <rect>
       <x>120</x>
@@ -236,7 +236,7 @@ backgronud-color:white;</string>
      <string>.</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_14">
+   <widget class="QPushButton" name="pushButton_0">
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -249,7 +249,7 @@ backgronud-color:white;</string>
      <string>0</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_15">
+   <widget class="QPushButton" name="pushButton_equals">
     <property name="geometry">
      <rect>
       <x>180</x>
@@ -262,7 +262,7 @@ backgronud-color:white;</string>
      <string>=</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_16">
+   <widget class="QPushButton" name="pushButton_div">
     <property name="geometry">
      <rect>
       <x>180</x>
@@ -275,7 +275,7 @@ backgronud-color:white;</string>
      <string>/</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_17">
+   <widget class="QPushButton" name="pushButton_clear">
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -288,7 +288,7 @@ backgronud-color:white;</string>
      <string>AC</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_18">
+   <widget class="QPushButton" name="pushButton_proc">
     <property name="geometry">
      <rect>
       <x>120</x>
@@ -301,7 +301,7 @@ backgronud-color:white;</string>
      <string>%</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_19">
+   <widget class="QPushButton" name="pushButton_signedness">
     <property name="geometry">
      <rect>
       <x>60</x>
